# course-design

./: CMakeLists.txt  README.md  main.c
C++-Enterprise-Management-System/: BaseStaff.cpp  BaseStaff.h  CMakeLists.txt  ManagementStaff.cpp  ManagementStaff.h  MarketingStaff.cpp  MarketingStaff.h  OperatorStaff.cpp  OperatorStaff.h  README.md  StaffManage.cpp  StaffManage.h  SystemMenu.cpp  SystemMenu.h  TechnicalStaff.cpp  TechnicalStaff.h  main.cpp
Enterprise-Management-System/: CMakeLists.txt  README.md  main.c
GreedySnake/: CMakeLists.txt  README.md  controller.cpp  controller.h  food.cpp  food.h  main.cpp  map.cpp  map.h  point.cpp  point.h  snake.cpp  snake.h  startinterface.cpp  startinterface.h  tools.cpp  tools.h
Linked_list_version/: data.txt  main.c
Structure_version/: CMakeLists.txt  README.md  data.txt  main.c
Student-Management-System/: README.md  data.txt
workermanager/: README.md
workermanager/src/Implement/: ManagerImp.java  SalaryImp.java  WorkerImp.java
workermanager/src/controller/: ManagerCon.java  SalaryCon.java  WorkerCon.java
workermanager/src/main/: Main.java
workermanager/src/modle/: Manager.java  Salary.java  Worker.java
workermanager/src/util/: DateUtil.java
